Use `main` instead of `article`

--- a/test-plain/in-04.html
+++ b/test-plain/in-04.html
@@ -1,10 +1,10 @@
-<article class="document">
-<section class="paragraphs">
+<main class="document">
+<div class="paragraphs">
 <p class="paragraph">
 <span class="phrase"> <span class="serif-roman">From</span> <em class="serif-italic">Elegy Written in a Country Churchyard</em> </span>
 </p>
-</section>
-<section class="lines">
+</div>
+<div class="lines">
 <p class="line">
 <span class="verse"> <span class="serif-roman">Here rests his head upon the lap of Earth</span> </span>
 </p>
@@ -17,5 +17,5 @@
 <p class="line">
 <span class="verse"></span> <span class="verse"> <span class="serif-roman">And Melancholy mark’d him for her own.</span> </span>
 </p>
-</section>
-</article>
+</div>
+</main>
