--- a/test-plain/in-43.html
+++ b/test-plain/in-43.html
@@ -4,9 +4,9 @@
 <span class="phrase"> <span class="serif-roman">It is said that Gauss, at ten, found himself</span> </span>
 </p>
 </div>
-<div class="lines">
-<p class="line">
-<span class="verse"> <div class="math"> <span class="math-triplet"> \({\sum} ^ {1 0 0} _ {n = 1}\) </span> <span class="math-plain"> \(n\) </span> <span class="math-plain"> \(=\) </span> <span class="math-plain"> \(1\) </span> <span class="math-plain"> \(0\) </span> <span class="math-plain"> \(0\) </span> <span class="math-plain"> \(\cdot\) </span> <span class="math-pair"> \(\frac {1 0 0 + 1} {2}\) </span> <span class="math-plain"> \(=\) </span> <span class="math-plain"> \(5\) </span> <span class="math-plain"> \(0\) </span> <span class="math-plain"> \(5\) </span> <span class="math-plain"> \(0\) </span> <span class="math-plain"> \(.\) </span> </div> </span>
+<div class="paragraphs">
+<p class="paragraph">
+<span class="phrase"> <div class="math"> <span class="math-triplet"> \({\sum} ^ {1 0 0} _ {n = 1}\) </span> <span class="math-plain"> \(n\) </span> <span class="math-plain"> \(=\) </span> <span class="math-plain"> \(1\) </span> <span class="math-plain"> \(0\) </span> <span class="math-plain"> \(0\) </span> <span class="math-plain"> \(\cdot\) </span> <span class="math-pair"> \(\frac {1 0 0 + 1} {2}\) </span> <span class="math-plain"> \(=\) </span> <span class="math-plain"> \(5\) </span> <span class="math-plain"> \(0\) </span> <span class="math-plain"> \(5\) </span> <span class="math-plain"> \(0\) </span> <span class="math-plain"> \(.\) </span> </div> </span>
 </p>
 </div>
 </main>
