--- a/test-plain/test-04.html
+++ b/test-plain/test-04.html
@@ -1,7 +1,7 @@
 <main class="document">
 <div class="paragraphs">
 <p class="paragraph">
-<span class="phrase"> <span class="serif-roman">from</span> <em class="serif-italic">Elegy Written in a Country Churchyard</em> </span>
+<span class="phrase"> <span class="serif-roman">From</span> <em class="serif-italic">Elegy Written in a Country Churchyard</em> </span>
 </p>
 </div>
 <div class="lines">
