--- a/test-plain/test-10.html
+++ b/test-plain/test-10.html
@@ -1,16 +1,16 @@
 <main class="document">
 <div class="paragraphs">
 <p class="paragraph">
-<span class="phrase"> <span class="serif-roman">this C program prints itself, and is a Gödel sentence:</span> </span>
+<span class="phrase"> <span class="serif-roman">This C program prints itself, and is a Gödel sentence:</span> </span>
 </p>
 <p class="paragraph">
-<span class="phrase"> <pre class="mono">// Source: D C Kozen, Automata and Computability, lecture 39</pre> </span>
+<span class="phrase"> <code class="mono">// Source: D C Kozen, Automata and Computability, lecture 39</code> </span>
 </p>
 <p class="paragraph">
-<span class="phrase"> <pre class="mono">char *s="char *s=%c%s%c;%cmain(){printf(s,34,s,34,10,10);}%c";</pre> </span>
+<span class="phrase"> <code class="mono">char *s=&quot;char *s=%c%s%c;%cmain(){printf(s,34,s,34,10,10);}%c&quot;;</code> </span>
 </p>
 <p class="paragraph">
-<span class="phrase"> <pre class="mono">main(){printf(s,34,s,34,10,10);}</pre> </span>
+<span class="phrase"> <code class="mono">main(){printf(s,34,s,34,10,10);}</code> </span>
 </p>
 </div>
 </main>
