Collapse spaces between a span and an ending punctuation

--- a/test-plain/test-01.html
+++ b/test-plain/test-01.html
@@ -1,7 +1,7 @@
 <main class="document">
 <div class="paragraphs">
 <p class="paragraph">
-<span class="phrase"> <span class="serif-roman">Hello world!</span> </span> <span class="phrase"> <span class="serif-roman">Who am I?</span> </span>
+<span class="phrase"> <span class="serif-roman">Hello world!</span> </span> <span class="phrase"> <span class="serif-roman">Who am I?</span> </span> <span class="phrase"></span>
 </p>
 </div>
 </main>
