--- a/test-plain/test-04.html
+++ b/test-plain/test-04.html
@@ -1,7 +1,7 @@
 <main class="document">
 <div class="paragraphs">
 <p class="paragraph">
-<span class="phrase"> <span class="serif-roman">From</span> <em class="serif-italic">Elegy Written in a Country Churchyard</em> </span>
+<span class="phrase"> <span class="serif-roman">From</span> <em class="serif-italic">Elegy Written in a Country Churchyard</em> </span> <span class="phrase"></span>
 </p>
 </div>
 <div class="lines">
@@ -9,13 +9,13 @@
 <span class="verse"> <span class="serif-roman">Here rests his head upon the lap of Earth</span> </span>
 </p>
 <p class="line">
-<span class="verse"> <span class="serif-roman">A youth to Fortune and to Fame unknown.</span> </span>
+<span class="verse"></span> <span class="verse"> <span class="serif-roman">A youth to Fortune and to Fame unknown.</span> </span>
 </p>
 <p class="line">
 <span class="verse"> <span class="serif-roman">Fair Science frown’d not on his humble birth,</span> </span>
 </p>
 <p class="line">
-<span class="verse"> <span class="serif-roman">And Melancholy mark’d him for her own.</span> </span>
+<span class="verse"></span> <span class="verse"> <span class="serif-roman">And Melancholy mark’d him for her own.</span> </span>
 </p>
 </div>
 </main>
