--- a/test-plain/test-10.html
+++ b/test-plain/test-10.html
@@ -1,7 +1,7 @@
 <main class="document">
 <div class="paragraphs">
 <p class="paragraph">
-<span class="phrase"> <span class="serif-roman">This C program prints itself, and is a Gödel sentence:</span> </span>
+<span class="phrase"> <span class="serif-roman">This C program prints itself, and is a Gödel sentence:</span> </span> <span class="phrase"></span>
 </p>
 <p class="paragraph">
 <span class="phrase"> <code class="mono">// Source: D C Kozen, Automata and Computability, lecture 39</code> </span>
