--- a/test-plain/test-30.html
+++ b/test-plain/test-30.html
@@ -1,7 +1,7 @@
 <main class="document">
 <div class="paragraphs">
 <p class="paragraph">
-<span class="phrase"> <span class="serif-roman">Here are some German strong verbs:</span> </span>
+<span class="phrase"> <span class="serif-roman">Here are some German strong verbs:</span> </span> <span class="phrase"></span>
 </p>
 </div>
 <table class="rows">
