--- a/test-plain/test-20.html
+++ b/test-plain/test-20.html
@@ -1,7 +1,7 @@
 <main class="document">
 <div class="paragraphs">
 <p class="paragraph">
-<span class="phrase"> <span class="serif-roman">Do not believe in everything on the</span> <a class="serif-roman" href="https://en.wikipedia.org/wiki/Main_Page">English Wikipedia</a> <span class="serif-roman">.</span> </span>
+<span class="phrase"> <span class="serif-roman">Do not believe in everything on the</span> <a class="serif-roman" href="https://en.wikipedia.org/wiki/Main_Page">English Wikipedia</a> <span class="serif-roman">.</span> </span> <span class="phrase"></span>
 </p>
 </div>
 </main>
