Fix the dingbat in break

--- a/test-plain/test-11.html
+++ b/test-plain/test-11.html
@@ -1,25 +1,25 @@
 <main class="document">
 <div class="paragraphs">
 <p class="paragraph">
-<span class="phrase"> <span class="serif-roman">This C program prints itself, and is a Gödel sentence:</span> </span> <span class="phrase">&emsp;</span>
+<span class="phrase"><span class="serif-roman">This C program prints itself, and is a Gödel sentence:</span></span> <span class="phrase">&ensp;</span>
 </p>
 <p class="paragraph">
-<span class="phrase"> <code class="mono">// Source: D C Kozen, Automata and Computability, lecture 39</code> </span>
+<span class="phrase"><code class="mono">// Source: D C Kozen, Automata and Computability, lecture 39</code></span>
 </p>
 <p class="paragraph">
-<span class="phrase"> <code class="mono">char *s=&quot;char *s=%c%s%c;%cmain(){printf(s,34,s,34,10,10);}%c&quot;;</code> </span>
+<span class="phrase"><code class="mono">char *s=&quot;char *s=%c%s%c;%cmain(){printf(s,34,s,34,10,10);}%c&quot;;</code></span>
 </p>
 <p class="paragraph">
-<span class="phrase"> <code class="mono">main()</code> </span>
+<span class="phrase"><code class="mono">main()</code></span>
 </p>
 <p class="paragraph">
-<span class="phrase"> <code class="mono">{</code> </span>
+<span class="phrase"><code class="mono">{</code></span>
 </p>
 <p class="paragraph">
-<span class="phrase">&emsp;</span> <span class="phrase"> <code class="mono">printf(s,34,s,34,10,10);</code> </span>
+<span class="phrase">&ensp;</span> <span class="phrase"><code class="mono">printf(s,34,s,34,10,10);</code></span>
 </p>
 <p class="paragraph">
-<span class="phrase"> <code class="mono">}</code> </span>
+<span class="phrase"><code class="mono">}</code></span>
 </p>
 </div>
 </main>
