--- a/test-plain/test-05.html
+++ b/test-plain/test-05.html
@@ -1,10 +1,10 @@
 <main class="document">
-<div class="paragraphs">
+<div class="section">
 <p class="paragraph">
 <span class="phrase"><span class="serif-roman">From</span> <em class="serif-italic">Elegy Written in a Country Churchyard</em></span>
 </p>
 </div>
-<div class="lines">
+<div class="stanza">
 <p class="line">
 <span class="verse"><span class="serif-roman">Here rests his head upon the lap of Earth</span></span>
 </p>
@@ -19,9 +19,9 @@
 </p>
 </div>
 <div class="break">
-<span class="phrase">&#10086;</span> <span class="phrase">&#10086;</span> <span class="phrase">&#10086;</span>
+<span class="phrase">&emsp;</span> <span class="phrase">&#10086;</span> <span class="phrase">&emsp;</span> <span class="phrase">&#10086;</span> <span class="phrase">&emsp;</span> <span class="phrase">&#10086;</span>
 </div>
-<div class="paragraphs">
+<div class="section">
 <p class="paragraph">
 <span class="phrase"><span class="serif-roman">We will learn more about Thomas Gray in the next week.</span></span>
 </p>
