--- a/test-plain/test-11.html
+++ b/test-plain/test-11.html
@@ -1,5 +1,5 @@
 <main class="document">
-<div class="paragraphs">
+<div class="section">
 <p class="paragraph">
 <span class="phrase"><span class="serif-roman">This C program prints itself, and is a Gödel sentence:</span></span> <span class="phrase">&ensp;</span>
 </p>
