--- a/test-plain/test-45.html
+++ b/test-plain/test-45.html
@@ -1,5 +1,5 @@
 <main class="document">
-<div class="paragraphs">
+<div class="section">
 <p class="paragraph">
 <span class="phrase"><span class="serif-roman">Consider equation</span></span>
 </p>
