--- a/test-plain/test-23.html
+++ b/test-plain/test-23.html
@@ -1,13 +1,12 @@
 <main class="document">
-<div class="paragraphs">
+<div class="section">
 <p class="paragraph">
-<span class="phrase"> <span class="serif-roman">Do not believe in everything on the</span> <a class="serif-roman" href="https://en.wikipedia.org/wiki/Main_Page">English Wikipedia</a> <span class="serif-roman">.</span> </span> <span class="phrase"></span>
+<span class="phrase"><span class="serif-roman">Do not believe in everything on the</span> <a class="serif-roman" href="https:%2F/en%2Ewikipedia%2Eorg%2Fwiki%2FMain_Page">English Wikipedia</a><span class="serif-roman">.</span></span>
 </p>
 </div>
-<img src="https://upload.wikimedia.org/wikipedia/en/8/80/Wikipedia-logo-v2.svg" class="graph" alt="Wikipedia logo v2 svg" >
-<div class="paragraphs">
+<div class="section">
 <p class="paragraph">
-<span class="phrase"> <em class="serif-italic">Figure 1: Wikipedia logo</em> </span>
+<span class="phrase"><em class="serif-italic">Figure 1: Wikipedia logo</em></span>
 </p>
 </div>
 </main>
