--- a/test-plain/test-30.html
+++ b/test-plain/test-30.html
@@ -1,59 +1,59 @@
 <main class="document">
-<div class="paragraphs">
+<div class="section">
 <p class="paragraph">
-<span class="phrase"> <span class="serif-roman">Here are some German strong verbs:</span> </span> <span class="phrase"></span>
+<span class="phrase"><span class="serif-roman">Here are some German strong verbs:</span></span> <span class="phrase">&ensp;</span>
 </p>
 </div>
-<table class="rows">
+<table class="array">
 <colgroup>
 <col style="width: 21%;">
 <col style="width: 21%;">
 <col style="width: 23%;">
 <col style="width: 35%;">
 </colgroup>
-<thead class="rows">
+<thead class="array">
 <tr class="row">
-<td class="cell"> <span class="serif-roman">Blasen</span> </td> <td class="cell"> <span class="serif-roman">Bläst</span> </td> <td class="cell"> <span class="serif-roman">Blies</span> </td> <td class="cell"> <span class="serif-roman">Hat geblasen</span> </td>
+<td class="cell"><span class="serif-roman">blasen</span></td> <td class="cell"><span class="serif-roman">bläst</span></td> <td class="cell"><span class="serif-roman">blies</span></td> <td class="cell"><span class="serif-roman">hat geblasen</span></td>
 </tr>
 </thead>
 <tbody>
 <tr class="row">
-<td class="cell"> <span class="serif-roman">Braten</span> </td> <td class="cell"> <span class="serif-roman">Brät</span> </td> <td class="cell"> <span class="serif-roman">Briet</span> </td> <td class="cell"> <span class="serif-roman">Hat gebraten</span> </td>
+<td class="cell"><span class="serif-roman">braten</span></td> <td class="cell"><span class="serif-roman">brät</span></td> <td class="cell"><span class="serif-roman">briet</span></td> <td class="cell"><span class="serif-roman">hat gebraten</span></td>
 </tr>
 </tbody>
 <tbody>
 <tr class="row">
-<td class="cell"> <span class="serif-roman">Fallen</span> </td> <td class="cell"> <span class="serif-roman">Fällt</span> </td> <td class="cell"> <span class="serif-roman">Fiel</span> </td> <td class="cell"> <span class="serif-roman">Ist gefallen</span> </td>
+<td class="cell"><span class="serif-roman">fallen</span></td> <td class="cell"><span class="serif-roman">fällt</span></td> <td class="cell"><span class="serif-roman">fiel</span></td> <td class="cell"><span class="serif-roman">ist gefallen</span></td>
 </tr>
 </tbody>
 <tbody>
 <tr class="row">
-<td class="cell"> <span class="serif-roman">Fangen</span> </td> <td class="cell"> <span class="serif-roman">Fängt</span> </td> <td class="cell"> <span class="serif-roman">Fing</span> </td> <td class="cell"> <span class="serif-roman">Hat gefangen</span> </td>
+<td class="cell"><span class="serif-roman">fangen</span></td> <td class="cell"><span class="serif-roman">fängt</span></td> <td class="cell"><span class="serif-roman">fing</span></td> <td class="cell"><span class="serif-roman">hat gefangen</span></td>
 </tr>
 </tbody>
 <tbody>
 <tr class="row">
-<td class="cell"> <span class="serif-roman">Halten</span> </td> <td class="cell"> <span class="serif-roman">Hält</span> </td> <td class="cell"> <span class="serif-roman">Hielt</span> </td> <td class="cell"> <span class="serif-roman">Hat gehalten</span> </td>
+<td class="cell"><span class="serif-roman">halten</span></td> <td class="cell"><span class="serif-roman">hält</span></td> <td class="cell"><span class="serif-roman">hielt</span></td> <td class="cell"><span class="serif-roman">hat gehalten</span></td>
 </tr>
 </tbody>
 <tbody>
 <tr class="row">
-<td class="cell"> <span class="serif-roman">Hängen</span> </td> <td class="cell"> <span class="serif-roman">Hängt</span> </td> <td class="cell"> <span class="serif-roman">Hing</span> </td> <td class="cell"> <span class="serif-roman">Hat gehangen</span> </td>
+<td class="cell"><span class="serif-roman">hängen</span></td> <td class="cell"><span class="serif-roman">hängt</span></td> <td class="cell"><span class="serif-roman">hing</span></td> <td class="cell"><span class="serif-roman">hat gehangen</span></td>
 </tr>
 </tbody>
 <tbody>
 <tr class="row">
-<td class="cell"> <span class="serif-roman">Lassen</span> </td> <td class="cell"> <span class="serif-roman">Läßt</span> </td> <td class="cell"> <span class="serif-roman">Ließ</span> </td> <td class="cell"> <span class="serif-roman">Hat gelassen</span> </td>
+<td class="cell"><span class="serif-roman">lassen</span></td> <td class="cell"><span class="serif-roman">läßt</span></td> <td class="cell"><span class="serif-roman">ließ</span></td> <td class="cell"><span class="serif-roman">hat gelassen</span></td>
 </tr>
 </tbody>
 <tbody>
 <tr class="row">
-<td class="cell"> <span class="serif-roman">Raten</span> </td> <td class="cell"> <span class="serif-roman">Rät</span> </td> <td class="cell"> <span class="serif-roman">Riet</span> </td> <td class="cell"> <span class="serif-roman">Hat geraten</span> </td>
+<td class="cell"><span class="serif-roman">raten</span></td> <td class="cell"><span class="serif-roman">rät</span></td> <td class="cell"><span class="serif-roman">riet</span></td> <td class="cell"><span class="serif-roman">hat geraten</span></td>
 </tr>
 </tbody>
 <tbody>
 <tr class="row">
-<td class="cell"> <span class="serif-roman">Schlafen</span> </td> <td class="cell"> <span class="serif-roman">Schläft</span> </td> <td class="cell"> <span class="serif-roman">Schlief</span> </td> <td class="cell"> <span class="serif-roman">Hat geschlafen</span> </td>
+<td class="cell"><span class="serif-roman">schlafen</span></td> <td class="cell"><span class="serif-roman">schläft</span></td> <td class="cell"><span class="serif-roman">schlief</span></td> <td class="cell"><span class="serif-roman">hat geschlafen</span></td>
 </tr>
 </tbody>
 </table>
