--- a/test-plain/test-00.html
+++ b/test-plain/test-00.html
@@ -1,7 +1,7 @@
 <main class="document">
-<div class="paragraphs">
+<div class="section">
 <p class="paragraph">
-<span class="phrase"> <span class="serif-roman">Hello!</span> </span> <span class="phrase"></span>
+<span class="phrase"><span class="serif-roman">Hello!</span></span>
 </p>
 </div>
 </main>
