--- a/test-plain/test-02.html
+++ b/test-plain/test-02.html
@@ -1,7 +1,7 @@
 <main class="document">
-<div class="paragraphs">
+<div class="section">
 <p class="paragraph">
-<span class="phrase"> <span class="serif-roman">Hello world!</span> </span> <span class="phrase"> <em class="serif-italic">Who am I?</em> </span> <span class="phrase"> <b class="serif-bold">24601</b> </span> <span class="phrase"></span>
+<span class="phrase"><span class="serif-roman">Hello world!</span></span> <span class="phrase"><em class="serif-italic">Who am I?</em></span> <span class="phrase"><b class="serif-bold">24601</b></span>
 </p>
 </div>
 </main>
