--- a/test-plain/test-10.html
+++ b/test-plain/test-10.html
@@ -1,16 +1,18 @@
 <main class="document">
-<div class="paragraphs">
+<div class="section">
 <p class="paragraph">
-<span class="phrase"> <span class="serif-roman">This C program prints itself, and is a Gödel sentence:</span> </span> <span class="phrase"></span>
+<span class="phrase"><span class="serif-roman">This C program prints itself.</span></span> <span class="phrase"><span class="serif-roman">It is an example of a Gödel sentence:</span></span>
 </p>
-<p class="paragraph">
-<span class="phrase"> <code class="mono">// Source: D C Kozen, Automata and Computability, lecture 39</code> </span>
+</div>
+<div class="stanza">
+<p class="line">
+<span class="verse"><code class="mono">// Source: D C Kozen, Automata and Computability, lecture 39</code></span>
 </p>
-<p class="paragraph">
-<span class="phrase"> <code class="mono">char *s=&quot;char *s=%c%s%c;%cmain(){printf(s,34,s,34,10,10);}%c&quot;;</code> </span>
+<p class="line">
+<span class="verse"><code class="mono">char *s=&quot;char *s=%c%s%c;%cmain(){printf(s,34,s,34,10,10);}%c&quot;;</code></span>
 </p>
-<p class="paragraph">
-<span class="phrase"> <code class="mono">main(){printf(s,34,s,34,10,10);}</code> </span>
+<p class="line">
+<span class="verse"><code class="mono">main(){printf(s,34,s,34,10,10);}</code></span>
 </p>
 </div>
 </main>
