--- a/test-plain/test-42.html
+++ b/test-plain/test-42.html
@@ -1,10 +1,10 @@
 <main class="document">
-<div class="paragraphs">
+<div class="section">
 <p class="paragraph">
-<span class="phrase"> <span class="serif-roman">It is said that Gauss, at ten, found himself</span> </span> <span class="phrase"></span>
+<span class="phrase"><span class="serif-roman">It is said that Gauss, at ten, found himself</span></span> <span class="phrase">&ensp;</span>
 </p>
 <p class="paragraph">
-<span class="phrase"> <span class="math"> <span class="math-plain"> \(1\) </span> <span class="math-plain"> \(+\) </span> <span class="math-plain"> \(2\) </span> <span class="math-plain"> \(+\) </span> <span class="math-plain"> \(3\) </span> <span class="math-plain"> \(+\) </span> <span class="math-sign"> \(\dotsb\) </span> <span class="math-plain"> \(+\) </span> <span class="math-plain"> \(1\) </span> <span class="math-plain"> \(0\) </span> <span class="math-plain"> \(0\) </span> <span class="math-plain"> \(=\) </span> <span class="math-plain"> \(1\) </span> <span class="math-plain"> \(0\) </span> <span class="math-plain"> \(0\) </span> <span class="math-plain"> \(\cdot\) </span> <span class="math-pair"> \(\frac {1 0 0 + 1} {}\) </span> <span class="math-plain"> \(=\) </span> <span class="math-plain"> \(5\) </span> <span class="math-plain"> \(0\) </span> <span class="math-plain"> \(5\) </span> <span class="math-plain"> \(0\) </span> <span class="math-plain"> \(.\) </span> </span> </span>
+<span class="phrase"><span class="math"><span class="math-plain">\(1\)</span> <span class="math-plain">\(+\)</span> <span class="math-plain">\(2\)</span> <span class="math-plain">\(+\)</span> <span class="math-plain">\(3\)</span> <span class="math-plain">\(+\)</span> <span class="math-sign">\(\dotsb\)</span> <span class="math-plain">\(+\)</span> <span class="math-plain">\(1\)</span> <span class="math-plain">\(0\)</span> <span class="math-plain">\(0\)</span> <span class="math-plain">\(=\)</span> <span class="math-plain">\(1\)</span> <span class="math-plain">\(0\)</span> <span class="math-plain">\(0\)</span> <span class="math-plain">\(\cdot\)</span> <span class="math-pair">\(\dfrac {1 0 0 + 1} {2}\)</span> <span class="math-plain">\(=\)</span> <span class="math-plain">\(5\)</span> <span class="math-plain">\(0\)</span> <span class="math-plain">\(5\)</span> <span class="math-plain">\(0\)</span> <span class="math-plain">\(.\)</span></span></span>
 </p>
 </div>
 </main>
