Add spaces around binary operators and orders

--- a/test-plain/test-11.html
+++ b/test-plain/test-11.html
@@ -18,7 +18,7 @@
 <span class="verse"><code class="mono">{</code></span>
 </p>
 <p class="line">
-<span class="phrase">&nbsp;</span> <span class="verse"><code class="mono">printf(s,34,s,34,10,10);</code></span>
+<span class="phrase">&ensp;</span> <span class="verse"><code class="mono">printf(s,34,s,34,10,10);</code></span>
 </p>
 <p class="line">
 <span class="verse"><code class="mono">}</code></span>
