Fix escape of address

--- a/test-plain/test-47.html
+++ b/test-plain/test-47.html
@@ -4,7 +4,7 @@
 <span class="phrase"><span class="serif-roman">By the property of Vandermonde matrix:</span></span>
 </p>
 <p class="paragraph">
-<span class="phrase"><span class="math"><span class="math-bracket-square">\(\left[ \;\begin {matrix}1\\1\\1\\\end {matrix}\; \;\begin {matrix}a\\b\\c\\\end {matrix}\; \;\begin {matrix}{a} ^ {2} _ {}\\{b} ^ {2} _ {}\\{c} ^ {2} _ {}\\\end {matrix}\; \right]\)</span><span class="math-plain">\(\:=\:\)</span><span class="math-bracket-round">\(\left( a \,-\, b \right)\)</span><span class="math-bracket-round">\(\left( b \,-\, c \right)\)</span><span class="math-bracket-round">\(\left( a \,-\, c \right)\)</span></span></span>
+<span class="phrase"><span class="math"><span class="math-bracket-square">\(\left[ \;\begin {matrix}1\\1\\1\\\end {matrix}\; \;\begin {matrix}a\\b\\c\\\end {matrix}\; \;\begin {matrix}{a} ^ {2}\\{b} ^ {2}\\{c} ^ {2}\\\end {matrix}\; \right]\)</span><span class="math-plain">\(\:=\:\)</span><span class="math-bracket-round">\(\left( a \,-\, b \right)\)</span><span class="math-bracket-round">\(\left( b \,-\, c \right)\)</span><span class="math-bracket-round">\(\left( a \,-\, c \right)\)</span></span></span>
 </p>
 </div>
 </main>
