--- a/test-plain/test-23.html
+++ b/test-plain/test-23.html
@@ -1,7 +1,7 @@
 <main class="document">
 <div class="section">
 <p class="paragraph">
-<span class="phrase"><span class="serif-roman">Do not believe in everything on the</span> <a class="serif-roman" href="https:%2F/en%2Ewikipedia%2Eorg%2Fwiki%2FMain_Page">English Wikipedia</a><span class="serif-roman">.</span></span> <span class="phrase">&ensp;</span>
+<span class="phrase"><span class="serif-roman">Do not believe in everything on the</span> <a class="serif-roman" href="https://en.wikipedia.org/wiki/Main_Page">English Wikipedia</a><span class="serif-roman">.</span></span> <span class="phrase">&ensp;</span>
 </p>
 </div>
 <div class="section">
