--- a/test-plain/test-05.html
+++ b/test-plain/test-05.html
@@ -9,13 +9,13 @@
 <span class="verse"><span class="serif-roman">Here rests his head upon the lap of Earth</span></span>
 </p>
 <p class="line">
-<span class="phrase">&ensp;</span> <span class="verse"><span class="serif-roman">A youth to Fortune and to Fame unknown.</span></span>
+<span class="verse">&ensp;</span> <span class="verse"><span class="serif-roman">A youth to Fortune and to Fame unknown.</span></span>
 </p>
 <p class="line">
 <span class="verse"><span class="serif-roman">Fair Science frown’d not on his humble birth,</span></span>
 </p>
 <p class="line">
-<span class="phrase">&ensp;</span> <span class="verse"><span class="serif-roman">And Melancholy mark’d him for her own.</span></span>
+<span class="verse">&ensp;</span> <span class="verse"><span class="serif-roman">And Melancholy mark’d him for her own.</span></span>
 </p>
 </div>
 <div class="break">
