--- a/test-plain/test-23.html
+++ b/test-plain/test-23.html
@@ -4,6 +4,7 @@
 <span class="phrase"><span class="serif-roman">Do not believe in everything on the</span> <a class="serif-roman" href="https://en.wikipedia.org/wiki/Main_Page">English Wikipedia</a><span class="serif-roman">.</span></span> <span class="phrase">&ensp;</span>
 </p>
 </div>
+<img src="https://upload.wikimedia.org/wikipedia/en/8/80/Wikipedia-logo-v2.svg" class="graph" alt="Wikipedia logo v2" >
 <div class="section">
 <p class="paragraph">
 <span class="phrase"><em class="serif-italic">Figure 1: Wikipedia logo</em></span>
