Consider kana as ideographs
Change fleuron

--- a/test-plain/test-40.html
+++ b/test-plain/test-40.html
@@ -4,7 +4,7 @@
 <span class="phrase"><span class="serif-roman">It is said that Gauss, at ten, found himself</span></span> <span class="phrase">&ensp;</span>
 </p>
 <p class="paragraph">
-<span class="phrase"><span class="math"><span class="math-plain">\(1\)</span><span class="math-plain">\(\,+\,\)</span><span class="math-plain">\(2\)</span><span class="math-plain">\(\,+\,\)</span><span class="math-plain">\(3\)</span><span class="math-plain">\(\,+\,\)</span><span class="math-sign">\(\dotsb\)</span><span class="math-plain">\(\,+\,\)</span><span class="math-plain">\(1\)</span><span class="math-plain">\(0\)</span><span class="math-plain">\(0\)</span><span class="math-plain">\(\;=\;\)</span><span class="math-plain">\(5\)</span><span class="math-plain">\(0\)</span><span class="math-plain">\(5\)</span><span class="math-plain">\(0\)</span><span class="math-plain">\(.\)</span></span></span>
+<span class="phrase"><span class="math"><span class="math-plain">\(1\)</span><span class="math-plain">\(+\)</span><span class="math-plain">\(2\)</span><span class="math-plain">\(+\)</span><span class="math-plain">\(3\)</span><span class="math-plain">\(+\)</span><span class="math-sign">\(\dotsb\)</span><span class="math-plain">\(+\)</span><span class="math-plain">\(1\)</span><span class="math-plain">\(0\)</span><span class="math-plain">\(0\)</span><span class="math-plain">\(\;=\;\)</span><span class="math-plain">\(5\)</span><span class="math-plain">\(0\)</span><span class="math-plain">\(5\)</span><span class="math-plain">\(0\)</span><span class="math-plain">\(.\)</span></span></span>
 </p>
 </div>
 </main>
