--- a/test-plain/test-03.html
+++ b/test-plain/test-03.html
@@ -1,12 +1,7 @@
 <main class="document">
 <div class="section">
 <p class="paragraph">
-<span class="phrase"><span class="serif-roman">From</span> <em class="serif-italic">Elegy Written in a Country Churchyard</em></span>
-</p>
-</div>
-<div class="stanza">
-<p class="line">
-<span class="verse"><span class="serif-roman">Here rests his head upon the lap of Earth</span></span>
+<span class="phrase"><span class="serif-roman">[Hello world!]</span></span> <span class="phrase"><em class="serif-italic">(Who am I?)</em></span> <span class="phrase"><b class="serif-bold">24601</b></span>
 </p>
 </div>
 </main>
