--- a/test-plain/test-46.html
+++ b/test-plain/test-46.html
@@ -4,10 +4,10 @@
 <span class="phrase"><span class="serif-roman">Consider equation</span></span>
 </p>
 <p class="paragraph">
-<span class="phrase"><span class="math"><span class="math-plain">\(a\)</span><span class="math-triplet">\({x} ^ {2}\)</span><span class="math-plain">\(\,+\,\)</span><span class="math-plain">\(b\)</span><span class="math-plain">\(x\)</span><span class="math-plain">\(\,+\,\)</span><span class="math-plain">\(c\)</span><span class="math-plain">\(\;=\;\)</span><span class="math-plain">\(0\)</span></span> <span class="serif-roman">Babylonians already knew that</span> <span class="math"><span class="math-plain">\(x\)</span></span> <span class="serif-roman">has the solution</span></span>
+<span class="phrase"><span class="math"><span class="math-plain">\(a\)</span><span class="math-triplet">\({x} ^ {2}\)</span><span class="math-plain">\(+\)</span><span class="math-plain">\(b\)</span><span class="math-plain">\(x\)</span><span class="math-plain">\(+\)</span><span class="math-plain">\(c\)</span><span class="math-plain">\(\;=\;\)</span><span class="math-plain">\(0\)</span></span> <span class="serif-roman">Babylonians already knew that</span> <span class="math"><span class="math-plain">\(x\)</span></span> <span class="serif-roman">has the solution</span></span>
 </p>
 <p class="paragraph">
-<span class="phrase"><span class="math"><span class="math-plain">\(x\)</span><span class="math-plain">\(\;=\;\)</span><span class="math-pair">\(\dfrac {\,-\, b \,\pm\, \surd \left( {b} ^ {2} \,-\, 4 a c \right)} {2 a}\)</span><span class="math-mono">\(\;\mathtt {FOR}\;\)</span><span class="math-plain">\(x\)</span></span> <span class="serif-roman">Isn’t that amazing?</span></span>
+<span class="phrase"><span class="math"><span class="math-plain">\(x\)</span><span class="math-plain">\(\;=\;\)</span><span class="math-pair">\(\dfrac {- b \,\pm\, \surd \left( {b} ^ {2} - 4 a c \right)} {2 a}\)</span><span class="math-mono">\(\;\mathtt {FOR}\;\)</span><span class="math-plain">\(x\)</span></span> <span class="serif-roman">Isn’t that amazing?</span></span>
 </p>
 </div>
 </main>
