--- a/test-plain/test-05.html
+++ b/test-plain/test-05.html
@@ -19,7 +19,7 @@
 </p>
 </div>
 <div class="break">
-<span class="phrase">&emsp;</span> <span class="phrase">🙤</span> <span class="phrase">&emsp;</span> <span class="phrase">🙤</span> <span class="phrase">&emsp;</span> <span class="phrase">🙤</span>
+<span class="phrase">&emsp;</span> <span class="phrase">❦</span> <span class="phrase">&emsp;</span> <span class="phrase">❦</span> <span class="phrase">&emsp;</span> <span class="phrase">❦</span>
 </div>
 <div class="section">
 <p class="paragraph">
