Use uppercase for mathbb and mathcal

--- a/test-plain/test-10.html
+++ b/test-plain/test-10.html
@@ -9,7 +9,7 @@
 <span class="verse"><code class="mono">// Source: D C Kozen, Automata and Computability, lecture 39</code></span>
 </p>
 <p class="line">
-<span class="verse"><code class="mono">char *s=&quot;char *s=%c%s%c;%cmain(){printf(&lt;wbr&gt;s,34,s,34,10,10);}%c&quot;;</code></span>
+<span class="verse"><code class="mono">char *s=&quot;char *s=%c%s%c;%cmain(){printf(<wbr>s,34,s,34,10,10);}%c&quot;;</code></span>
 </p>
 <p class="line">
 <span class="verse"><code class="mono">main(){printf(s,34,s,34,10,10);}</code></span>
