--- a/test-plain/test-45.html
+++ b/test-plain/test-45.html
@@ -10,7 +10,7 @@
 <span class="phrase"><span class="serif-roman">Babylonians already knew that</span> <span class="math"><span class="math-plain">\(x\)</span></span> <span class="serif-roman">has the solution:</span></span>
 </p>
 <p class="paragraph">
-<span class="phrase"><span class="math"><span class="math-plain">\(x\)</span><span class="math-plain">\(\;=\;\)</span><span class="math-pair">\(\dfrac {\,-\, b \,\pm\, \surd \left( b ^ {2} \,-\, 4 a c \right)} {2 a}\)</span></span></span>
+<span class="phrase"><span class="math"><span class="math-plain">\(x\)</span><span class="math-plain">\(\;=\;\)</span><span class="math-pair">\(\dfrac {-\, b \,\pm\, \surd \left( b ^ {2} \,-\, 4 a c \right)} {2 a}\)</span></span></span>
 </p>
 <p class="paragraph">
 <span class="phrase"><span class="serif-roman">Isn’t it amazing?</span></span>
