--- a/test-plain/test-51.html
+++ b/test-plain/test-51.html
@@ -1,10 +1,10 @@
 <main class="document">
 <div class="section">
 <p class="paragraph">
-<span class="phrase"><span class="serif-roman">By Taylor series around</span> <span class="math"><span class="math-letter">\(\pi\)</span><span class="math-plain">\(/\)</span><span class="math-plain">\(2\)</span></span><span class="serif-roman">:</span></span>
+<span class="phrase"><span class="serif-roman">By Taylor series around</span> <span class="math"><span class="math-letter">\(\pi\)</span><span class="math-plain">\(\,/\,\)</span><span class="math-plain">\(2\)</span></span> <span class="serif-roman">we have:</span></span>
 </p>
 <p class="paragraph">
-<span class="phrase"><span class="math"><span class="math-triplet">\(\underset {x \:\rightarrow\: \infty} {\,\mathrm {lim}\,}\)</span><span class="math-bracket-round">\(\left( x ^ {2} \left( \,\mathrm {atan}\, x \,-\, \dfrac {p} {2} \right) \,+\, x \right)\)</span><span class="math-plain">\(\;=\;\)</span><span class="math-plain">\(0\)</span></span></span>
+<span class="phrase"><span class="math"><span class="math-triplet">\(\underset {x \:\rightarrow\: \infty} {\mathrm {lim}}\)</span><span class="math-bracket-round">\(\left( x ^ {2} \left( \,\mathrm {atan}\, x \,-\, \dfrac {p} {2} \right) \,+\, x \right)\)</span><span class="math-plain">\(\;=\;\)</span><span class="math-plain">\(0\)</span></span></span>
 </p>
 </div>
 </main>
