Add word break opportunity in table cells

--- a/test-plain/test-30.html
+++ b/test-plain/test-30.html
@@ -11,7 +11,7 @@
 <col style="width: 23%;">
 <col style="width: 35%;">
 </colgroup>
-<thead class="array">
+<thead>
 <tr class="row">
 <td class="cell"><span class="serif-roman">blasen</span></td> <td class="cell"><span class="serif-roman">bläst</span></td> <td class="cell"><span class="serif-roman">blies</span></td> <td class="cell"><span class="serif-roman">hat geblasen</span></td>
 </tr>
