Greedily split math brackets and triplets!
Remove spaces when uniting for math

--- a/test-plain/test-53.html
+++ b/test-plain/test-53.html
@@ -4,7 +4,7 @@
 <span class="phrase"><span class="serif-roman">Pythagorean theorem states:</span></span>
 </p>
 <p class="paragraph">
-<span class="phrase"><span class="math"><span class="math-triplet">\(\mathrm {sin}\, \left[ \vartheta \right] ^ {2}\)</span><span class="math-plain">\(\,+\,\)</span><span class="math-triplet">\(\mathrm {cos}\, \left[ \vartheta \right] ^ {2}\)</span><span class="math-plain">\(\;=\;\)</span><span class="math-plain">\(1\)</span></span></span>
+<span class="phrase"><span class="math"><span class="math-serif">\(\,\mathrm{sin}\,\)</span><span class="math-bracket-square">\(\left[\vphantom{\vartheta}\right.\)</span><span class="math-letter">\(\vartheta\)</span><span class="math-bracket-square">\(\left.\vphantom{\vartheta}\right]\)</span><span class="math-triplet">\(\vphantom{\left[\vartheta\right]}^{2}\)</span><span class="math-plain">\(\,+\,\)</span><span class="math-serif">\(\,\mathrm{cos}\,\)</span><span class="math-bracket-square">\(\left[\vphantom{\vartheta}\right.\)</span><span class="math-letter">\(\vartheta\)</span><span class="math-bracket-square">\(\left.\vphantom{\vartheta}\right]\)</span><span class="math-triplet">\(\vphantom{\left[\vartheta\right]}^{2}\)</span><span class="math-plain">\(\;=\;\)</span><span class="math-plain">\(1\)</span></span></span>
 </p>
 </div>
 </main>
