--- a/test-plain/test-44.html
+++ b/test-plain/test-44.html
@@ -4,7 +4,7 @@
 <span class="phrase"><span class="serif-roman">It is said that Gauss, at ten, found himself:</span></span> <span class="phrase">&ensp;</span>
 </p>
 <p class="paragraph">
-<span class="phrase"><span class="math"><span class="math-triplet">\(\displaystyle\sum\limits ^ {1 0 0} _ {n \;=\; 1}\)</span><span class="math-plain">\(n\)</span><span class="math-plain">\(\;=\;\)</span><span class="math-plain">\(1\)</span><span class="math-plain">\(0\)</span><span class="math-plain">\(0\)</span><span class="math-plain">\(\,\cdot\,\)</span><span class="math-pair">\(\dfrac {1 0 0 \,+\, 1} {2}\)</span><span class="math-plain">\(\;=\;\)</span><span class="math-plain">\(5\)</span><span class="math-plain">\(0\)</span><span class="math-plain">\(5\)</span><span class="math-plain">\(0\)</span><span class="math-plain">\(.\)</span></span></span>
+<span class="phrase"><span class="math"><span class="math-triplet">\(\displaystyle\sum\limits^{100}_{n\;=\;1}\)</span><span class="math-plain">\(n\)</span><span class="math-plain">\(\;=\;\)</span><span class="math-plain">\(1\)</span><span class="math-plain">\(0\)</span><span class="math-plain">\(0\)</span><span class="math-plain">\(\,\cdot\,\)</span><span class="math-pair">\(\dfrac{100\,+\,1}{2}\)</span><span class="math-plain">\(\;=\;\)</span><span class="math-plain">\(5\)</span><span class="math-plain">\(0\)</span><span class="math-plain">\(5\)</span><span class="math-plain">\(0\)</span><span class="math-plain">\(.\)</span></span></span>
 </p>
 </div>
 </main>
