Split last item in main of triplet, with the rest

--- a/test-plain/test-56.html
+++ b/test-plain/test-56.html
@@ -4,7 +4,7 @@
 <span class="phrase"><span class="serif-roman">Suppose a planet is moving around the sun, then its position and velocity can be found as thus:</span></span>
 </p>
 <p class="paragraph">
-<span class="phrase"><span class="math"><span class="math-plain">\(P\)</span><span class="math-triplet">\(\vphantom{P}_{n}\)</span><span class="math-sign">\(\;\equiv\;\)</span><span class="math-triplet">\(\displaystyle\sum\limits_{\bar{p}\:\in\:\mathbb{P}\vphantom{\mathbb{P}}_{n}}\)</span><span class="math-plain">\(\bar{p}\)</span><span class="math-plain">\(,\,\)</span><span class="math-mono">\(\;\mathtt{for}\;\)</span><span class="math-plain">\(n\)</span><span class="math-plain">\(\;=\;\)</span><span class="math-plain">\(1\)</span><span class="math-plain">\(,\,\)</span><span class="math-sign">\(\,\dotsc\,\)</span><span class="math-plain">\(,\,\)</span><span class="math-plain">\(N\)</span><span class="math-plain">\(;\,\)</span></span></span>
+<span class="phrase"><span class="math"><span class="math-triplet">\(P \vphantom{ P}_{n}\)</span><span class="math-sign">\(\;\equiv\;\)</span><span class="math-triplet">\( \displaystyle\sum\limits_{\bar{p} \;\in\; \mathbb{P} \vphantom{ \mathbb{P}}_{n}}\)</span><span class="math-plain">\(\bar{p}\)</span><span class="math-plain">\(,\,\)</span><span class="math-mono">\(\;\mathtt{for}\;\)</span><span class="math-plain">\(n\)</span><span class="math-plain">\(\;=\;\)</span><span class="math-plain">\(1\)</span><span class="math-plain">\(,\,\)</span><span class="math-sign">\(\,\dotsc\,\)</span><span class="math-plain">\(,\,\)</span><span class="math-plain">\(N\)</span><span class="math-plain">\(;\,\)</span></span></span>
 </p>
 </div>
 </main>
