--- a/test-plain/test-30.html
+++ b/test-plain/test-30.html
@@ -6,10 +6,10 @@
 </div>
 <table class="array">
 <colgroup>
-<col style="width: 21%;">
-<col style="width: 21%;">
-<col style="width: 23%;">
 <col style="width: 35%;">
+<col style="width: 21%;">
+<col style="width: None%;">
+<col style="width: None%;">
 </colgroup>
 <thead>
 <tr class="row">
